# KinectV2Imaq

./: CMakeLists.txt  KinectV2Imaq.vcxproj  README.md
include/: ColourAdapter.h  DepthAdapter.h  InfraredAdapter.h  KinectDeviceInfo.h  LongExposureInfraredAdapter.h
src/: ColourAdapter.cpp  DepthAdapter.cpp  InfraredAdapter.cpp  KinectDeviceInfo.cpp  KinectV2Imaq_export.cpp  LongExposureInfraredAdapter.cpp
